@@ -46,6 +46,7 @@ import android.view.KeyEvent;
 import android.view.Menu;
 import android.view.MenuItem;
 import android.view.View;
+import android.view.ViewTreeObserver;
 import android.view.inputmethod.InputMethodManager;
 import android.widget.EditText;
 import android.widget.LinearLayout;
@@ -63,6 +64,13 @@ import androidx.appcompat.app.AppCompatDelegate;
 import androidx.appcompat.widget.Toolbar.OnMenuItemClickListener;
 import androidx.core.content.ContextCompat;
 import androidx.core.content.res.ResourcesCompat;
+import androidx.core.view.ViewCompat;
+import androidx.core.view.WindowCompat;
+import androidx.core.view.WindowInsetsAnimationCompat;
+import androidx.core.view.WindowInsetsAnimationCompat.BoundsCompat;
+import androidx.core.view.WindowInsetsAnimationCompat.Callback;
+import androidx.core.view.WindowInsetsCompat;
+import androidx.core.view.WindowInsetsCompat.Type;
 import androidx.fragment.app.Fragment;
 import androidx.fragment.app.FragmentManager;
 import androidx.interpolator.view.animation.FastOutSlowInInterpolator;
@@ -74,14 +82,17 @@ import androidx.navigation.NavOptions;
 import androidx.navigation.Navigator;
 import androidx.navigation.fragment.NavHostFragment;
 import androidx.preference.PreferenceManager;
+import com.google.android.material.bottomappbar.BottomAppBar;
 import com.google.android.material.bottomsheet.BottomSheetDialogFragment;
 import com.google.android.material.color.DynamicColors;
 import com.google.android.material.color.DynamicColorsOptions;
 import com.google.android.material.color.HarmonizedColors;
 import com.google.android.material.color.HarmonizedColorsOptions;
 import com.google.android.material.elevation.SurfaceColors;
+import com.google.android.material.math.MathUtils;
 import com.google.android.material.snackbar.Snackbar;
 import info.guardianproject.netcipher.proxy.OrbotHelper;
+import java.lang.reflect.Field;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.security.NoSuchAlgorithmException;
@@ -143,6 +154,7 @@ public class MainActivity extends AppCompatActivity {
   private HapticUtil hapticUtil;
   private boolean runAsSuperClass;
   private boolean debug;
+  private float fabBaseY;
 
   @Override
   protected void onCreate(Bundle savedInstanceState) {
@@ -325,6 +337,33 @@ public class MainActivity extends AppCompatActivity {
 
     // BOTTOM APP BAR
 
+    // Use reflection to store bottomInset in BAB manually
+    // The automatic method includes IME insets which is bad behavior for BABs
+    ViewCompat.setOnApplyWindowInsetsListener(binding.bottomAppBar, (v, insets) -> {
+      int bottomInset = insets.getInsets(Type.systemBars()).bottom;
+      ViewCompat.setPaddingRelative(v, 0, 0, 0, bottomInset);
+      Class<?> classBottomAppBar = BottomAppBar.class;
+      Object objectBottomAppBar = classBottomAppBar.cast(binding.bottomAppBar);
+      Field fieldBottomInset = null;
+      try {
+        if (objectBottomAppBar != null && objectBottomAppBar.getClass().getSuperclass() != null) {
+          fieldBottomInset = objectBottomAppBar.getClass().getDeclaredField("bottomInset");
+        } else {
+          Log.e(TAG, "onCreate: reflection for bottomInset not working");
+        }
+      } catch (NoSuchFieldException e) {
+        Log.e(TAG, "onCreate: ", e);
+      }
+      if (fieldBottomInset != null) {
+        fieldBottomInset.setAccessible(true);
+        try {
+          fieldBottomInset.set(objectBottomAppBar, bottomInset);
+        } catch (IllegalAccessException e) {
+          Log.e(TAG, "onCreate: ", e);
+        }
+      }
+      return insets;
+    });
     binding.bottomAppBar.setNavigationOnClickListener(v -> {
       if (clickUtil.isDisabled()) {
         return;
@@ -341,6 +380,60 @@ public class MainActivity extends AppCompatActivity {
     scrollBehavior = new BottomScrollBehavior(
         this, binding.bottomAppBar, binding.fabMain, binding.fabMainScroll
     );
+
+    // IME ANIMATION
+
+    Callback callback = new Callback(Callback.DISPATCH_MODE_STOP) {
+      WindowInsetsAnimationCompat animation;
+      float startY, endY;
+
+      @Override
+      public void onPrepare(@NonNull WindowInsetsAnimationCompat animation) {
+        this.animation = animation;
+        startY = binding.fabMain.getY();
+      }
+
+      @NonNull
+      @Override
+      public BoundsCompat onStart(
+          @NonNull WindowInsetsAnimationCompat animation, @NonNull BoundsCompat bounds) {
+        endY = binding.fabMain.getY();
+        binding.fabMain.setY(startY);
+        return bounds;
+      }
+
+      @NonNull
+      @Override
+      public WindowInsetsCompat onProgress(
+          @NonNull WindowInsetsCompat insets,
+          @NonNull List<WindowInsetsAnimationCompat> animations) {
+        binding.fabMain.setY(MathUtils.lerp(startY, endY, animation.getInterpolatedFraction()));
+        return insets;
+      }
+    };
+    ViewCompat.setOnApplyWindowInsetsListener(binding.fabMain, (v, insets) -> {
+      if (insets.isVisible(Type.ime())) {
+        v.setTranslationY(
+            -insets.getInsets(Type.ime()).bottom - UiUtil.dpToPx(this, 16)
+        );
+      } else {
+        v.setY(fabBaseY);
+      }
+      return insets;
+    });
+    ViewCompat.setWindowInsetsAnimationCallback(binding.fabMain, callback);
+    ViewTreeObserver observer = binding.fabMain.getViewTreeObserver();
+    observer.addOnGlobalLayoutListener(new ViewTreeObserver.OnGlobalLayoutListener() {
+      @Override
+      public void onGlobalLayout() {
+        fabBaseY = binding.fabMain.getY();
+        if (binding.fabMain.getViewTreeObserver().isAlive()) {
+          binding.fabMain.getViewTreeObserver().removeOnGlobalLayoutListener(this);
+        }
+      }
+    });
+
+    // SUPPORTED GROCY VERSIONS
 
     Runnable onSuccessConfigLoad = () -> {
       String version = sharedPrefs.getString(Constants.PREF.GROCY_VERSION, null);
@@ -982,10 +1075,8 @@ public class MainActivity extends AppCompatActivity {
 
   public void showKeyboard(EditText editText) {
     new Handler().postDelayed(() -> {
+      WindowCompat.getInsetsController(getWindow(), editText).show(Type.ime());
       editText.requestFocus();
-      ((InputMethodManager) Objects
-          .requireNonNull(getSystemService(Context.INPUT_METHOD_SERVICE))
-      ).showSoftInput(editText, InputMethodManager.SHOW_IMPLICIT);
     }, 100);
   }
 
