@@ -1,6 +1,8 @@
 ## 3.0.1
 
-- Improved: Animated icons in bottom bar when navigating
+- Improved: Finally the floating action button stays visible when the keyboard is shown
+- Improved: Bottom app bar not above keyboard anymore
+- Improved: Animated menu in bottom bar when navigating
 - Fixed: Recipe actions throwing errors (thanks @timhae!) (#646)
 - Fixed: Simultaneous display of recipe photos and placeholder images
 - Fixed: Behavior option "reduce app startup time" not working on Android 12+
